--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ python = ">=3.8.1,<3.9.7 || >3.9.7,<3.10"
 jupyterlab = "3.6.1"
 numpy = "^1.19.4"
 seaborn = "^0.11.0"
-sklearn = "^0.0"
 ipywidgets = "^7.5.1"
 streamlit = "1.17.0"
 click = "<=8.0.4"
@@ -29,6 +28,9 @@ ipympl = "^0.7.0"
 jupyterlab-language-pack-ja-JP = "^3.2.post4"
 tqdm = "^4.64.0"
 debugpy = "<1.6.5"
+salesforce-merlion = {extras = ["dashboard"], version = "^2.0.2"}
+jupyter = "^1.0.0"
+lingam = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
 black = ">=22.6.0"
